<resources>
    <string name="app_name">YarnIt!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="email_hint">Email Address</string>
    <string name="login_existing_button_text">Click to Login</string>
    <string name="new_login_button_text">Create New Account</string>
    <string name="password_hint_text">Password</string>
    <string name="welcome_text">Welcome to Yarnit!</string>
    <string name="welcome_text_one">Welcome to our yarn store\'s inventory</string>
    <string name="welcome_text_two">Ready to learn how to use this app?</string>
    <string name="welcome_instructions_button_text">Instructions</string>
    <string name="instructions_title_text">Instructions</string>
    <string name="instructions_text_one">How to use the Yarnit! store inventory</string>
    <string name="instructions_text_two">First, look at the list of existing yarn inventory.</string>
    <string name="instructions_text_three">Once you\'re in the list, if there\'s a yarn item on the shelf that\'s not in the list, click the Add Yarn Button.</string>
    <string name="instructions_text_four">Easy, right? Let\'s go! Click below to open the inventory list.</string>
    <string name="list_button_text">Inventory List</string>
    <string name="yarn_list_title_text">Yarnit! Inventory List</string>
    <string name="add_yarn_detail_title">Add a New Yarn</string>
    <string name="yarn_color_name">New Yarn Color</string>
    <string name="yarn_company_brand">Yarn Company/Brand</string>
    <string name="yarn_weight">Yarn Weight</string>
    <string name="yarn_description_type">Yarn Description or Type</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="yarnColorHint">New yarn\'s color</string>
    <string name="yarnBrandHint">New Yarn\'s Brand</string>
    <string name="yarnWeightHint">New Yarn\'s Weight</string>
    <string name="yarnDescriptionHint">New Yarn\'s Description</string>
    <string name="yarnColorLabel">Yarn Color</string>
    <string name="royalBlueColor">Royal Blue</string>
    <string name="yarnBrandLabel">Yarn Brand</string>
    <string name="redHeartSuperSaverBrand">Red Heart Super Saver</string>
    <string name="worstedWeightFour">Worsted Weight/4</string>
    <string name="acrylicYarnType">Acrylic</string>
    <string name="blackColor">Black</string>
    <string name="bernatBrand">Bernat</string>
    <string name="bulkyWeight">Bulky</string>
    <string name="cottonAcrylicYarnType"><![CDATA[Cotton & Acrylic]]></string>
    <string name="addYarnButtonText">Add New Yarn</string>
    <string name="logout">Logout</string>
</resources>