<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="yarnListViewModel"
            type="com.crayonwriter.yarnit.YarnlistViewModel" />

        <variable
            name="yarnItem"
            type="com.crayonwriter.yarnit.YarnItem" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/testLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".screens.YarnlistFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/yarnlist_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/yarnListTitle"
                style="@style/PageTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/yarn_list_title_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yarnItemColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yarnColorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:text="@string/yarnColorLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yarnListTitle" />

            <TextView
                android:id="@+id/yarnColorEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/yarnColorHint"
                android:inputType="textPersonName"
                android:text="@string/royalBlueColor"
                app:layout_constraintEnd_toEndOf="@+id/yarnListTitle"
                app:layout_constraintTop_toBottomOf="@+id/yarnListTitle" />

            <TextView
                android:id="@+id/yarnBrandText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="21dp"
                android:text="@string/yarnBrandLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yarnColorText" />


            <TextView
                android:id="@+id/yarnBrandEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:ems="10"
                android:hint="@string/yarnBrandHint"
                android:inputType="textPersonName"
                android:text="@string/redHeartSuperSaverBrand"
                app:layout_constraintStart_toStartOf="@+id/yarnColorEditText"
                app:layout_constraintTop_toBottomOf="@+id/yarnColorEditText" />

            <TextView
                android:id="@+id/yarnWeightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/yarn_weight"
                app:layout_constraintStart_toStartOf="@+id/yarnBrandText"
                app:layout_constraintTop_toBottomOf="@+id/yarnBrandText" />


            <TextView
                android:id="@+id/yarnWeightEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:ems="10"
                android:hint="@string/yarnWeightHint"
                android:inputType="textPersonName"
                android:text="@string/worstedWeightFour"
                app:layout_constraintStart_toStartOf="@+id/yarnBrandEditText"
                app:layout_constraintTop_toBottomOf="@+id/yarnBrandEditText" />

            <TextView
                android:id="@+id/yarnDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/yarn_description_type"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="@+id/yarnWeightText"
                app:layout_constraintStart_toEndOf="@+id/yarnWeightText" />

            <TextView
                android:id="@+id/yarnDescriptionEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/yarnDescriptionHint"
                android:inputType="textPersonName"
                android:text="@string/acrylicYarnType"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintStart_toStartOf="@+id/yarnWeightEditText" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="218dp"
                android:layout_marginBottom="278dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/floatingActionButton2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/addNewYarnLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="350dp"
                android:orientation="vertical"
                android:text="Test text here."
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:clickable="true"
                android:src="@android:drawable/ic_input_add"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/addYarnButtonText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>