<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/instructionsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.InstructionsFragment">

      <TextView
        android:id="@+id/InstructionsTitleText"
        style="@style/PageTitleStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/instructions_title_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/InstructionsText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:layout_marginBottom="115dp"
        android:text="@string/instructions_text_one"
        app:layout_constraintBottom_toTopOf="@+id/InstructionsText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/InstructionsText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="51dp"
        android:text="@string/instructions_text_two"
        app:layout_constraintBottom_toTopOf="@+id/InstructionsText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InstructionsText1" />

    <TextView
        android:id="@+id/InstructionsText3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="41dp"
        android:text="@string/instructions_text_three"
        app:layout_constraintBottom_toTopOf="@+id/instructions_text_4"
        app:layout_constraintEnd_toEndOf="@+id/InstructionsText2"
        app:layout_constraintStart_toStartOf="@+id/InstructionsText2"
        app:layout_constraintTop_toBottomOf="@+id/InstructionsText2" />

    <TextView
        android:id="@+id/instructions_text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="63dp"
        android:text="@string/instructions_text_four"
        app:layout_constraintBottom_toTopOf="@+id/listButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InstructionsText3" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="217dp"
        android:text="@string/list_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_text_4" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>