<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/WelcomeFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/WelcomeTitleText"
        style="@style/PageTitleStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/welcome_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/WelcomeText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="85dp"
        android:text="@string/welcome_text_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/WelcomeText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/welcome_text_two"
        app:layout_constraintStart_toStartOf="@+id/WelcomeText1"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText1" />

    <Button
        android:id="@+id/WelcomeInstructionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="40dp"
        android:text="@string/welcome_instructions_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText2" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>