<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- ConstraintLayout makes sense here so it's easier to have the buttons at various
heights, and because it's more versatile in case future changes need to be made -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LoginFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.LoginFragment">

        <TextView
            android:id="@+id/loginTitle"
            style="@style/PageTitleStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/login_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="119dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="38dp"
            android:ems="10"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/loginExistingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loginExistingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/login_existing_button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/addNewLoginButton"
            app:layout_constraintEnd_toStartOf="@+id/addNewLoginButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addNewLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="230dp"
            android:text="@string/new_login_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loginExistingButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>