<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/yarnlist_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/yarnItemColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/yarnColorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/yarnColorLabel"
            app:layout_constraintBottom_toBottomOf="@+id/yarnColorEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/yarnColorEditText" />

        <TextView
            android:id="@+id/yarnColorEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="52dp"
            android:ems="10"
            android:hint="@string/yarnColorHint"
            android:inputType="textPersonName"
            android:text="@string/blackColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/yarnBrandText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="21dp"
            android:text="@string/yarnBrandLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yarnColorText" />


        <TextView
            android:id="@+id/yarnBrandEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:hint="@string/yarnBrandHint"
            android:inputType="textPersonName"
            android:text="@string/bernatBrand"
            app:layout_constraintStart_toStartOf="@+id/yarnColorEditText"
            app:layout_constraintTop_toBottomOf="@+id/yarnColorEditText" />

        <TextView
            android:id="@+id/yarnWeightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/yarn_weight"
            app:layout_constraintStart_toStartOf="@+id/yarnBrandText"
            app:layout_constraintTop_toBottomOf="@+id/yarnBrandText" />


        <TextView
            android:id="@+id/yarnWeightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/yarnWeightHint"
            android:inputType="textPersonName"
            android:text="@string/bulkyWeight"
            app:layout_constraintStart_toStartOf="@+id/yarnBrandEditText"
            app:layout_constraintTop_toBottomOf="@+id/yarnBrandEditText" />

        <TextView
            android:id="@+id/yarnDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/yarn_description_type"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="@+id/yarnWeightText"
            app:layout_constraintStart_toEndOf="@+id/yarnWeightText" />

        <TextView
            android:id="@+id/yarnDescriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/yarnDescriptionHint"
            android:inputType="textPersonName"
            android:text="@string/cottonAcrylicYarnType"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/yarnWeightEditText" />


        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginTop="41dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yarnWeightText" />

        <TextView
            android:id="@+id/addNewYarnLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:id="@+id/yarnItemLayout"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent">-->

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:id="@+id/yarnlist_layout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical">-->

    <!--    <LinearLayout-->
    <!--        android:id="@+id/yarnItemColor"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--        <TextView-->
    <!--            android:id="@+id/yarnColorText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/yarn_color_name"-->
    <!--            tools:layout_editor_absoluteX="16dp"-->
    <!--            tools:layout_editor_absoluteY="99dp" />-->

    <!--        <EditText-->
    <!--            android:id="@+id/yarnColorEditText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:ems="10"-->
    <!--            android:hint="@string/yarnColorHint"-->
    <!--            android:inputType="textPersonName"-->
    <!--            android:text="@string/yarn_color_name"-->
    <!--            tools:layout_editor_absoluteX="203dp"-->
    <!--            tools:layout_editor_absoluteY="84dp" />-->
    <!--    </LinearLayout>-->

    <!--    <LinearLayout-->
    <!--        android:id="@+id/yarnItemBrand"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--        <TextView-->
    <!--            android:id="@+id/yarnBrandText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/yarn_company_brand"-->
    <!--            tools:layout_editor_absoluteX="16dp"-->
    <!--            tools:layout_editor_absoluteY="188dp" />-->

    <!--        <EditText-->
    <!--            android:id="@+id/yarnBrandEditText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:ems="10"-->
    <!--            android:hint="@string/yarnBrandHint"-->
    <!--            android:inputType="textPersonName"-->
    <!--            android:text="@string/yarn_company_brand"-->
    <!--            tools:layout_editor_absoluteX="202dp"-->
    <!--            tools:layout_editor_absoluteY="162dp" />-->
    <!--    </LinearLayout>-->

    <!--    <LinearLayout-->
    <!--        android:id="@+id/yarnItemWeight"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--        <TextView-->
    <!--            android:id="@+id/yarnWeightText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/yarn_weight"-->
    <!--            tools:layout_editor_absoluteX="16dp"-->
    <!--            tools:layout_editor_absoluteY="250dp" />-->

    <!--        <EditText-->
    <!--            android:id="@+id/yarnWeightEditText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:ems="10"-->
    <!--            android:hint="@string/yarnWeightHint"-->
    <!--            android:inputType="textPersonName"-->
    <!--            android:text="@string/yarn_weight"-->
    <!--            tools:layout_editor_absoluteX="202dp"-->
    <!--            tools:layout_editor_absoluteY="232dp" />-->

    <!--    </LinearLayout>-->

    <!--    <LinearLayout-->
    <!--        android:id="@+id/yarnItemDescription"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--        <TextView-->
    <!--            android:id="@+id/yarnDescriptionText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/yarn_description_type"-->
    <!--            tools:layout_editor_absoluteX="16dp"-->
    <!--            tools:layout_editor_absoluteY="309dp" />-->

    <!--        <EditText-->
    <!--            android:id="@+id/yarnDescriptionEditText"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:ems="10"-->
    <!--            android:hint="@string/yarnDescriptionHint"-->
    <!--            android:inputType="textPersonName"-->
    <!--            android:text="@string/yarn_description_type"-->
    <!--            tools:layout_editor_absoluteX="205dp"-->
    <!--            tools:layout_editor_absoluteY="293dp" />-->
    <!--    </LinearLayout>-->

    <!--    <View-->
    <!--        android:id="@+id/divider"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="?android:attr/listDivider" />-->


